fix padding issue on mobile

--- a/CVv2/style.css
+++ b/CVv2/style.css
@@ -191,7 +191,7 @@
   }
 
   #projetsContainer {
-    padding: 20px;
+    padding: 10px;
     line-height: 25px;
   }
   
